objects/Closed_Lost_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Account_Shut_Down_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Shut Down Details</label>
        <referenceTo>Account_Shut_Down_Details__c</referenceTo>
        <relationshipName>Cvent_Lost_Client_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Functionality_Requirements__c</fullName>
        <label>Additional Functionality Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Cvent_Lost_Client_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Experience__c</fullName>
        <label>Customer Service Experience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>In_Future_would_you_opt_for_Cvent__c</fullName>
        <label>In Future would you opt for Cvent?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Moved_to_Competitor__c</fullName>
        <label>Moved to Competitor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_canceling_your_Cvent_License__c</fullName>
        <label>Reason for canceling your Cvent License</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No upcoming events</fullName>
                </value>
                <value>
                    <fullName>Using a different event registration tool</fullName>
                </value>
                <value>
                    <fullName>Using an in-house/custom built event registration tool</fullName>
                </value>
                <value>
                    <fullName>Lack of functionality</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Issues with customer service/support</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommend_Cvent_to_a_Friend_or_Colleague__c</fullName>
        <label>Recommend Cvent to a Friend or Colleague</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Satisfaction_Level_Event_Mgmnt_Tool__c</fullName>
        <label>Satisfaction Level - Event Mgmnt Tool</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_we_could_have_done_better__c</fullName>
        <label>What we could have done better.</label>
        <type>TextArea</type>
    </fields>
    <label>Lost Client Survey</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Cvent Lost Client Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lost Client Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>